<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageViewTopbarLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sample" />

    <TextView
        android:id="@+id/textViewTopbarAbbrivationQTUM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="23dp"
        android:text="@string/wallet_qtum_abbreviation"
        android:textColor="@color/text_color_normal"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTopbarAllCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16.5dp"
        android:layout_marginTop="23dp"
        android:text="@string/wallet_all_coin"
        android:textColor="@color/text_color_normal"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTopbarAbbrivationBTC"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTopbarAbbrivationBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="23dp"
        android:text="@string/wallet_btc_abbreviation"
        android:textColor="@color/text_color_normal"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTopbarAbbrivationETH"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTopbarAbbrivationETH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="23dp"
        android:text="@string/wallet_eth_abbreviation"
        android:textColor="@color/text_color_normal"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTopbarAbbrivationQTUM"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewTopbarUnderlineQTUM"
        android:layout_width="20dp"
        android:layout_height="3dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="6dp"
        android:background="@color/top_menu_btc_underline"
        app:layout_constraintEnd_toEndOf="@+id/textViewTopbarAbbrivationBTC"
        app:layout_constraintStart_toStartOf="@+id/textViewTopbarAbbrivationBTC"
        app:layout_constraintTop_toBottomOf="@+id/textViewTopbarAbbrivationBTC" />

    <View
        android:id="@+id/viewTopbarUnderlineETH"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="6dp"
        android:background="@color/top_menu_eth_underline"
        app:layout_constraintEnd_toEndOf="@+id/textViewTopbarAbbrivationETH"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTopbarAbbrivationETH"
        app:layout_constraintTop_toBottomOf="@+id/textViewTopbarAbbrivationETH" />

    <View
        android:id="@+id/viewTopbarUnderlineBTC"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/top_menu_qtum_underline"
        app:layout_constraintEnd_toEndOf="@+id/textViewTopbarAbbrivationQTUM"
        app:layout_constraintStart_toStartOf="@+id/textViewTopbarAbbrivationQTUM"
        app:layout_constraintTop_toBottomOf="@+id/textViewTopbarAbbrivationQTUM" />

    <android.support.constraint.Group
        android:id="@+id/groupTopBarCoinList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textViewTopbarAbbrivationQTUM,textViewTopbarAllCoins,textViewTopbarAbbrivationBTC,textViewTopbarAbbrivationETH,viewTopbarUnderlineQTUM,viewTopbarUnderlineETH,viewTopbarUnderlineBTC" />

</android.support.constraint.ConstraintLayout>
